# quantsim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_SUMMARY.md  GITHUB_SETUP_GUIDE.md  LICENSE  MANIFEST.in  OPEN_SOURCE_READY_SUMMARY.md  PYPI_GITHUB_SETUP.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  sample_batch_config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish-to-pypi.yml  test.yml
docs/: index.md
docs/assets/: .gitkeep
docs/community/: support.md
docs/development/: contributing.md
docs/examples/: sma-crossover.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
quantsim/: __init__.py
quantsim/cli/: __init__.py  main.py
quantsim/core/: __init__.py  event_queue.py  events.py  simulation_engine.py
quantsim/data/: __init__.py  base.py  csv_parser.py  dummy_ohlcv.csv  synthetic_data.py  yahoo_finance.py
quantsim/execution/: __init__.py  execution_handler.py  slippage.py
quantsim/indicators/: __init__.py  atr.py  sma.py
quantsim/ml/: base_ml_strategy.py  feature_generator.py  trainer.py
quantsim/portfolio/: __init__.py  portfolio.py  position.py  position_sizer.py  risk_parity_portfolio.py  trade_log.py
quantsim/reports/: __init__.py  plotter.py  report_generator.py
quantsim/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  pairs_trading.py  simple_ml.py  sma_crossover.py
scripts/: bump_version.py
tests/: test_new_features.py
tests/core/: __init__.py  test_event_queue.py  test_events.py  test_simulation_engine.py
tests/data/: __init__.py  sample_data.csv  sample_data_custom_cols.csv  test_csv_parser.py  test_synthetic_data.py  test_yahoo_finance.py
tests/execution/: __init__.py  test_execution_handler_advanced_orders.py  test_execution_handler_market.py  test_slippage_models.py
tests/indicators/: __init__.py  test_atr.py  test_sma.py
tests/ml/: test_trainer.py
tests/portfolio/: __init__.py  test_portfolio_core.py  test_portfolio_metrics.py  test_risk_parity_portfolio.py
tests/reports/: test_report_generator.py
tests/strategies/: __init__.py  test_mean_reversion_strategy.py  test_momentum_strategy.py  test_sma_crossover_strategy.py
